--- a/screen.css
+++ b/screen.css
@@ -1,1 +1,37 @@
 /* Add screen styles below */
+h1 {
+    .poller-one-regular {
+        font-family: "Poller One", serif;
+        font-weight: 400;
+        font-style: normal;
+        color: #FFE971;
+      }
+}
+h2 {
+    .monofett-regular {
+        font-family: "Monofett", monospace;
+        font-weight: 400;
+        font-style: normal;
+        color: #FFE971;
+      }
+}
+
+h3 {
+    .mr-dafoe-regular {
+        font-family: "Mr Dafoe", cursive;
+        font-weight: 400;
+        font-style: normal;
+      }
+}
+
+h4 {
+    .nova-mono-regular {
+        font-family: "Nova Mono", monospace;
+        font-weight: 400;
+        font-style: normal;
+      }
+}
+
+body {
+    background-image: url(MacBook\ Air\ -\ 3.jpg);
+}
