--- a/screen.css
+++ b/screen.css
@@ -24,6 +24,47 @@ h4 {
     color: var(--primary-text-color);
 }
 
+.container {
+    border-width: 1.5px;
+    border-style: solid;
+    border-color: #FFFBF4;
+    border-radius: 33px;
+}
+
+.image-grid {
+    --gap: 16px;
+    --num-cols: 6;
+    --row-height: 300px;
+    margin: 0 auto;
+    width: 1137px;
+    height: 530px;
+
+box-sizing: border-box;
+padding: var(--gap);
+
+display: grid;
+grid-template-columns: repeat(var(--num-cols), 1fr);
+grid-auto-rows: var(--primary-text-color);
+gap: var(--gap);
+}
+
+.image-grid > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-grid-col-2 {
+    grid-column: span 2;
+}
+
+.image-grid-row-2 {
+    grid-row: span 2;
+}
+
 body {
+    margin: 0;
     background-image: url(MacBook\ Air\ -\ 3.jpg);
+    background-size: 100% 100%;
+    min-height: 100vh
 }
